logs/mobility/build.make.031.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doPickupControllerMovements()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:426:25: error: ‘pi’ was not declared in this scope
 while (blockYawError < -pi)
                         ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:431:23: error: ‘pi’ was not declared in this scope
 while(blockYawError > pi)
                       ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
